[gd_scene load_steps=3 format=3 uid="uid://bs1wo0a5jfsjo"]

[ext_resource type="Script" uid="uid://f78tf267xexq" path="res://scripts/main_menu.gd" id="1_xqga4"]
[ext_resource type="FontFile" uid="uid://cbj8usx8wede3" path="res://assets/fonts/BoldPixels.ttf" id="2_ovrgc"]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xqga4")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -432.0
offset_top = -380.0
offset_right = 432.0
offset_bottom = -124.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("2_ovrgc")
theme_override_font_sizes/normal_font_size = 128
text = "The Adventure of Beep n' Boop"
fit_content = true
horizontal_alignment = 1

[node name="VBoxContainer" type="BoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -448.0
offset_top = -92.0
offset_right = 384.0
offset_bottom = 484.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
vertical = true

[node name="NewGameButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_bottom = NodePath("../PlayWalkthroughButton")
theme_override_fonts/font = ExtResource("2_ovrgc")
theme_override_font_sizes/font_size = 64
text = "New Game"

[node name="PlayWalkthroughButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_top = NodePath("../NewGameButton")
focus_neighbor_bottom = NodePath("../OptionsButton")
theme_override_fonts/font = ExtResource("2_ovrgc")
theme_override_font_sizes/font_size = 64
text = "Play the Walkthrough!"

[node name="ContinueButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_top = NodePath("../NewGameButton")
focus_neighbor_bottom = NodePath("../OptionsButton")
theme_override_fonts/font = ExtResource("2_ovrgc")
theme_override_font_sizes/font_size = 64
disabled = true
text = "Continue"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_top = NodePath("../PlayWalkthroughButton")
focus_neighbor_bottom = NodePath("../QuitButton")
theme_override_fonts/font = ExtResource("2_ovrgc")
theme_override_font_sizes/font_size = 64
text = "Options"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_top = NodePath("../OptionsButton")
theme_override_fonts/font = ExtResource("2_ovrgc")
theme_override_font_sizes/font_size = 64
text = "Quit"

[connection signal="pressed" from="VBoxContainer/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="VBoxContainer/PlayWalkthroughButton" to="." method="_on_play_walkthrough_button_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
